--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet">
     <title>DH News</title>
 </head>
 <body>
+    <div class="container">
     <header>
         <h1>DH News</h1>
         <h4><strong>Postado em 01/06/2021</strong></h4>
@@ -37,12 +41,35 @@
             Porro ut, eaque pariatur, consequatur aut dolorum provident soluta impedit tenetur magnam perspiciatis! Numquam beatae excepturi accusantium, doloribus doloremque in laborum aperiam illo ratione velit? Quis distinctio mollitia sapiente repellat.</p>
         </section>
     </main>
-    <footer align="center">
-        <hr>
-        <img src="img/facebook.svg" width="50" alt="">
-        <img src="img/instagram.svg" width="50" alt="">
-        <img src="img/linkedin.svg" width="50" alt="">
-        <img src="img/youtube.svg" width="50" alt="">
+    <footer>
+        <ul class="redes-sociais">
+            <li>
+                <a target="_blank" href="https://www.facebook.com/digitalhousebrasil
+                ">
+                    <img src="img/facebook.svg" width="50" alt="">
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.instagram.com/digitalhousebrasil/
+                ">
+                    <img src="img/instagram.svg" width="50" alt="">
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.linkedin.com/school/digital-house-brasil/mycompany/
+                ">
+                    <img src="img/linkedin.svg" width="50" alt="">
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.youtube.com/channel/UCRQdwmWMhTcqDFjPT4UPZYA/featured
+                ">
+                    <img src="img/youtube.svg" width="50" alt="">
+                </a>
+            </li>
+        </ul>
     </footer>
+</div>
 </body>
 </html>
+
